fix(Introduction): update image drop-shadow filter for improved visibility

--- a/src/components/RenderSection/Introduction/introduction.module.scss
+++ b/src/components/RenderSection/Introduction/introduction.module.scss
@@ -48,7 +48,7 @@
         }
 
         img {
-            filter: drop-shadow(-1rem -1rem 2rem var(--shadow-color-a));
+            filter: drop-shadow(0 0 1rem var(--shadow-color-a));
         }
     }
 }
